活动发起界面和接口、登出接口，密码修改接口

--- a/Together/html/main.html
+++ b/Together/html/main.html
@@ -92,7 +92,7 @@
                 </script>-->
                
                 <div id="act-content"></div>
-                <div id="publish" style="position:fixed;bottom:40px;right:40px;weight:40px;height:40px" onclick="alert('我也要发起活动!')" >
+                <div id="publish" style="position:fixed;bottom:40px;right:40px;weight:40px;height:40px" onclick="publish()" >
                 <img src="../image/edit.png"></img>
                 </div>
             </div>
