--- a/Together/html/setting-con.html
+++ b/Together/html/setting-con.html
@@ -34,8 +34,8 @@
 		                    	昵称<em>{{=it.nickname}}</em>
 		                	</a>
 		                {{??}}
-		                	<a tapmode="" onclick="modifyNick('APICloud');">
-		                    	昵称<em>APICloud</em>
+		                	<a tapmode="" onclick="modifyNick('Together');">
+		                    	昵称<em>Together</em>
 		                	</a>
 	                	{{?}}
 	                	
@@ -57,6 +57,7 @@
             
             <ul class="more shadow">
                  <li class="modify"><a tapmode="" onclick="modifyPwd();">修改密码</a></li>
+                 <li class="modify"><a tapmode="" onclick="Memorandum();">我的地理备忘录</a></li>
                  <li class="clear" tapmode="" onclick="clearData();"><a>清理缓存<em>1M</em></a></li>
                  <li class="update"><a>检测新版本<em>已经是最新版本</em></a></li>
                  <li class="about" tapmode="" onclick="openAbout();"><a>关于我们</a></li>
