--- a/Together/html/news.html
+++ b/Together/html/news.html
@@ -28,12 +28,12 @@
                 <div id="activity">
                     <script id="act-template" type="text/x-dot-template">
                         {{~    it.array:value:index    }}
-                        <div class="act-Item">
+                        <div class="act-Item" onclick="act_details({{=value.id}})">
                         <h2>{{=value.act_name}}</h2>
-                        <h3>{{=value.username}}</h3>
+                        <h3>{{=value.publisher}}</h3>
                         <h4>{{=value.location}}</h4>
                         <h4>{{=value.details}}</h4>
-                        <h4>{{=value.time}}</h4>
+                        <h4>{{=value.act_time}}</h4>
                         </div>
                         {{~}}
                     </script>
