--- a/Together/html/newMemorandum.html
+++ b/Together/html/newMemorandum.html
@@ -14,28 +14,10 @@
         <div id="wrap">
             <div id="header">
                 <a class="back-icon" tapmode="" onclick="api.closeWin()"></a>
-                <h1>发起活动</h1>
+                <h1>新增备忘录</h1>
             </div>
+            <div style="height:206px"></div>
             <div id="main">
-                <div class="input-wrap">
-                    <table>
-                        <tr>
-                            <td>活动名：</td>
-                            <td>
-                            <input type="text" placeholder="活动名称" class="txt" id="act_name" value="" />
-                            <i class="del" tapmode="" onclick="delWord(this)"></i></td>
-                        </tr>
-                    </table>
-                </div>
-                <div id = "filter"   onclick="act_selecter()" class="input-wrap">
-                    <table>
-                        <tr>
-                            <td>活动类型:</td>
-                            <!-- <td><img src="../image/menu.png"/></td>-->
-                            <td><label id = "type" class="txt">点击选择类型</label></td>
-                        </tr>
-                    </table>
-                </div>
                 <div class="input-wrap">
                     <table>
                         <tr>
@@ -49,16 +31,35 @@
                         <tr>
                             <td>地点：</td>
                             <td>
-                            <input id="location" placeholder="活动地点" class="txt" />
-                            <i class="del" tapmode="" onclick="delWord(this)"></i></td>
+                            <input id="location" placeholder="办事地点" class="txt" />
+                            <i class="del" tapmode="" onclick="closeTimeSelecter(this)"></i></td>
                         </tr>
                     </table>
                 </div>
-                <div class="input-wrap last">
-                    其他说明：                     <textarea placeholder="其他说明" rows="5" cols="20" class="details" id="details" value="" ></textarea>
-                    <i class="del" tapmode="" onclick="delWord(this)"></i>
+                <!--<div class="input-wrap">
+                <table>
+                <tr>
+                <td>内容：</td>
+                <td>
+                <input type="text" placeholder="备忘内容" class="txt" id="act_name" value="" />
+                <i class="del" tapmode="" onclick="delWord(this)"></i></td>
+                </tr>
+                </table>
                 </div>
-                <a class="btn" tapmode="active" onclick="commit()">发起活动</a>
+                <div id = "filter"   onclick="act_selecter()" class="input-wrap">
+                <table>
+                <tr>
+                <td>类型:</td>
+                <!-- <td><img src="../image/menu.png"/></td>
+                <td><label id = "type" class="txt">点击选择类型</label></td>
+                </tr>
+                </table>
+                </div>-->
+                <div class="input-wrap last">
+                    备忘内容：                     <textarea placeholder="备忘内容" rows="5" class="details" id="details" value="" ></textarea>
+                    <i class="del" tapmode="" onclick="closeTimeSelecter(this)"></i>
+                </div>
+                <a class="btn" tapmode="active" onclick="commit()">完成</a>
             </div>
             <!--<textarea rows="5" cols="20" ></textarea>-->
         </div>
@@ -67,30 +68,47 @@
     <script type="text/javascript" src="../script/common.js"></script>
     <script type="text/javascript" src="../script/modifyPwd.js"></script>
     <script>
+		apiready = function() {
+			var obj = api.require('calendar');
+			obj.open({
+				x : 0,
+				y : 45,
+				width : api.winWidth,
+				height : 200,
+				specialDate : ['2015-05-01', '2015-05-11', '2015-05-20', '2015-05-25', '2015-05-31']
+			}, function(ret, err) {
+				var date = ret.date;
+				alert(date);
+			});
+		}
 		var flag = 1;
 		var type = "";
 		var act_time = "";
 		function setTime() {
 			var time = $api.byId('act_time');
-			//time.innerHTML = "2015-12";
 			var obj = api.require('timeSelector');
 			if (window.flag == 1) {
 				obj.open({
 					x : (api.frameWidth - 300) / 2,
 					y : 30,
 					width : 300,
-					height : 160
+					height : 200
 				}, function(ret, err) {
 					var hour = ret.hour;
 					var minit = ret.minit;
 					act_time = ret.hour + ":" + ret.minit + ":00";
 					time.innerHTML = act_time;
+					//alert(flag);
 				});
 				window.flag = 0;
 			} else {
 				obj.close();
 				window.flag = 1;
 			}
+		}
+
+		function closeTimeSelecter(el) {
+			delWord(el);
 		}
 
 		function act_selecter() {
