--- a/Together/html/modifyNick.html
+++ b/Together/html/modifyNick.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrap">
         <div id="header">
-            <a class="back-icon" tapmode="" onclick="api.closeWin()"></a>
+            <a class="back-icon" tapmode="" onclick="api.closeWin();"></a>
             <h1>修改昵称</h1>
         </div>
         <div id="main">
