个人中心，积分，活动删除，密码修改bug，私信聊天等

--- a/Together/html/activity.html
+++ b/Together/html/activity.html
@@ -33,7 +33,7 @@
                 添加新朋友
             </div>
             <div class="contactItem" onclick="haveAtry()">
-                试试缘分
+                没准你认识
             </div>
             <div class="contactItem">
                 其他
