--- a/Together/html/modifyPwd.html
+++ b/Together/html/modifyPwd.html
@@ -18,7 +18,7 @@
         </div>
         <div id="main">
             <div class="input-wrap">
-                <input type="password" placeholder="当前密码" class="txt" id="currentPwd" value="" />
+                <input type="password" placeholder="当前密码" class="txt" id="oldPwd" value="" />
                 <i class="del" tapmode="" onclick="delWord(this)"></i>
             </div>
             <div class="input-wrap">
