--- a/Together/html/Memorandum.html
+++ b/Together/html/Memorandum.html
@@ -69,7 +69,22 @@
 	        url: './newMemorandum.html'
         });
     }
-    
+    apiready = function(){
+        //pull to refresh
+    api.setRefreshHeaderInfo({
+        visible: true,
+        // loadingImgae: 'wgt://image/refresh-white.png',
+        bgColor: '#f2f2f2',
+        textColor: '#4d4d4d',
+        textDown: '下拉刷新...',
+        textUp: '松开刷新...',
+        showTime: true
+    }, function (ret, err) {
+       alert("刷新！");
+
+        api.refreshHeaderLoadDone();
+    });
+    }
     
     </script>
 </html>
