活动部分基本完结
1.大厅排序添加按位置，按热度排序2.拒绝某人参加某活动4.对应界面实现.5.删除杂项

--- a/Together/html/chat.html
+++ b/Together/html/chat.html
@@ -112,7 +112,7 @@
                         {{? value.FromUserID==value.me }}
                         <div class="sender">
                         <div class="sender-avatar">
-                        <img src="../image/emotion/zem14.png">
+                        <img src="../icon/icon150x150.png">
                         </div>
                         <div class="sender-cont">
                         <div class="right_triangle"></div>
