--- a/Together/html/user-other.html
+++ b/Together/html/user-other.html
@@ -30,6 +30,10 @@
                 <a class="back-icon"  tapmode="" onclick="api.closeWin()"></a>
                 <h1></h1>
             </div>
+            
+            <div id="reject" style="position:fixed;top:2px;left:50px;z-index:2001">
+                 
+            </div>
             <div style="position:fixed;top:2px;right:10px;z-index:2001">
             <a class="btn" onclick="openchatDetail()"> 发私信</a>
             </div>
