--- a/Together/html/news.html
+++ b/Together/html/news.html
@@ -64,8 +64,12 @@
                 </div>
                 <div id="news">
                 <ul id="txtNewsList">
-                </ul>
+                </ul>   
                 </div>-->
+                <div id="lon-lat" style="display:none">
+                    <label id="lon"></label>
+                    <label id="lat"></label>
+                </div>
             </div>
         </div>
     </body>
